# bootcamp-python

aula01/: README.md  desafio.py  exemplo_02.py  exemplo_03.py
aula02/: README.md  exer01.py  exer02.py  exer03.py  exer04.py  exer05.py  exer06.py  exer07.py  exer08.py  exer09.py  exer10.py  exer12.py  exer13.py  exer14.py  exer15.py  exer16.py  exer17.py  exer18.py  exer19.py  exer20.py  exer21.py  exer22.py  exer23.py  exer24.py  exer25.py
aula03/: README.md  exer01.py  exer02.py  exer03.py  exer04.py  exer05.py  exer06.py  exer07.py  exer08.py  exer09.py  exer10.py  exer11.py  exer12.py  exer13.py  exer14.py  exer15.py
aula04/: README.md  arquivos.py  exer01.py  exer02.py  exer03.py  exer04.py  exer05.py  exer06.py  exer07.py  exer08.py  exer09.py  exer10.py  exer11.py  exer12.py  exer13.py  exer14.py  exer15.py  exer16.py  exer17.py  exer18.py  exer19.py  exer20.py
aula05/: README.md
aula07/: README.md  desafio.py  exer01.py  exer02.py  exer03.py  exer04.py  exer05.py  exer06.py
aula08/: README.md  etl.py  pipeline.py  pyproject.toml
aula09/: README.md  exemplo_00.py  logging_exemplo_erros.py  pyproject.toml
aula11-15/: exemplo.csv  exemplo2.csv  pyproject.toml  usar_class.py
aula11-15/src/interface/classes/: csv_class.py
aula16/: database.db  pyproject.toml
aula17/: README.md  desafio.db  desafio.py  desafio_query.py  exemplo_01.py  meubanco.db  pyproject.toml
aula18/: README.md  exemplo_00.py  pyproject.toml
aula18/src/: pokemon.db
aula19/: pyproject.toml
aula19/src/: test.db
