[project]
name = "aula17"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Costa Santos",email = "leonardo.costa.santos.si@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
